Added working api to save Orders

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<script src="Script/jquery-2.1.4.min.js"></script>
 		<script src="Script/bootstrap.min.js"></script>
 		<script src="Script/bootstrap-hover-dropdown.min.js"></script><!-- yes -->
-    	<script src="Script/bootstrap-select.js"></script>
+    	<!-- <script src="Script/bootstrap-select.js"></script> -->
     	<script src="Script/jquery.mCustomScrollbar.concat.min.js"></script>
 		<script src="vendor/angular.min.js"></script>
 		<script src="vendor/angular-ui-router.min.js"></script>
